# mpf-employer-rag

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  skills-lock.json
.beads/: metadata.json
agents/: rag_agent.py  rag_tools.py
config/: settings.py
mcp/: zvec_server.py
rag/: index.py  zvec_db.py
rag/doc/: employers_handbook_mpf_obligations.md
